@@ -121,23 +121,11 @@ class TestConnection < Test::Unit::TestCase
   end
 
   def test_nodes
-    db = Connection.new({:left => ['foo', 123]}, nil, :connect => false)
-    nodes = db.nodes
-    assert_equal 2, db.nodes.length
-    assert_equal ['foo', 123], nodes[0]
-    assert_equal ['localhost', Connection::DEFAULT_PORT], nodes[1]
-
-    db = Connection.new({:right => 'bar'}, nil, :connect => false)
+    db = Connection.paired([['foo', 27017], ['bar', 27018]], :connect => false)
     nodes = db.nodes
     assert_equal 2, nodes.length
-    assert_equal ['localhost', Connection::DEFAULT_PORT], nodes[0]
-    assert_equal ['bar', Connection::DEFAULT_PORT], nodes[1]
-
-    db = Connection.new({:right => ['foo', 123], :left => 'bar'}, nil, :connect => false)
-    nodes = db.nodes
-    assert_equal 2, nodes.length
-    assert_equal ['bar', Connection::DEFAULT_PORT], nodes[0]
-    assert_equal ['foo', 123], nodes[1]
+    assert_equal ['foo', 27017], nodes[0]
+    assert_equal ['bar', 27018], nodes[1]
   end
 
   context "Saved authentications" do
